common-applications/test-environment/openeuler-compatibility/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-compatibility
  name: openeuler-compatibility
