common-applications/test-environment/openeuler-compatibility/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: server-policy-01
  namespace: openeuler-compatibility
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
    - ports:
        - protocol: TCP
          port: 8003
      from:
        - podSelector:
            matchLabels:
              app: server
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: website-policy-01
  namespace: openeuler-compatibility
spec:
  podSelector:
    matchLabels:
      app: website
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
